# neuromodulation

./: .gitignore  CLAUDE.md  SPEC-proto-pt6.md  SPEC.md  interim_report_chapter3_notes.md  main.py  pyproject.toml
prototype/: SPEC-proto-pt1.md  SPEC-proto-pt2.md  SPEC-proto-pt3.md  SPEC-proto-pt4.md  SPEC-proto-pt5.md  SPEC-proto-pt6.md  SPEC-proto-pt7.md  configs.py  data.py  iteration-notes.md  methods.py  model.py  neuromod.py  sweep.py  train.py
results/: convergence_cl_seen.json  convergence_study.json  convergence_study.py  directgain.py  directgain_gated_vs_naive.py  directgain_introspect.py  ewc_er_baseline.py  gain_bottleneck_analysis.py  iter10_consolidation.py  iter1_final.py  iter1_val_sweep.py  iter2_diag.py  iter2_sweep.py  iter3_drivers.py  iter4_stateful.py  iter5_diagnostic.py  iter5_er.py  iter6_logit.py  iter7_importance.py  iter8_taskroute.py  iter9_recency.py  phase7_log.txt  pt4_standard.py  pt5_cl_trajectories.html  pt5_cl_trajectories.py  pt5_compute_memory.py  pt5_driver_repr.md  pt5_driver_repr.py  pt5_er_task_id.py  pt5_gain_forms.py  pt5_gain_forms_buffer.py  pt5_gain_forms_table.py  pt5_iter2_gain.py  pt5_iter3.py  pt5_iter3_followup.py  pt5_iter3_gain_metareplay.py  pt5_iter3_metareplay.py  pt5_mask_overlap.py  pt5_mask_overlap_adam.py  pt5_mask_overlap_gate.py  (+60 more)
tests/: test_data.py  test_ewc_er.py  test_neuromod.py  test_neuromod_pt5.py
