[project]
name = "finalproject-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "pytest>=9.0.3",
    "torch>=2.12.0",
    "torchvision>=0.20.0",
    "wandb>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
